--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
+    "@tanstack/react-query": "^5.64.1",
+    "axios": "^1.7.9",
+    "cosmicjs": "^5.0.5",
     "edgedb": "^1.5.12",
     "next": "15.1.4",
     "react": "^19.0.0",
